Vers 0.0.1 First HTML version of the home page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,121 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/style.css" />
+		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
 		<title>Ohmyfood!</title>
 	</head>
 	<body>
+		<!--Header-->
+		<header>
+			<div id="logo">
+                <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+            </div>
+		</header>
 		
+		<!--First Section: Find a restaurant-->
+		<section>
+			<div><i class="fas fa-map-marker-alt"></i>Paris, Belleville</div>
+
+			<div>
+				<h1>Réservez le menu qui vous convient</h1>
+				<p>Découvrez des restaurants d'exceptions, sélectionnés par nos soins.</p>
+				<button>Explorer nos restaurants</button>
+			</div>
+		</section>
+
+		<!--Second Section: Help for use-->
+		<section>
+			<h2>Fonctionnement</h2>
+			<div>
+				<span>1</span>
+				<i class="fas fa-mobile-alt"></i>
+				Choisissez un restaurant
+			</div>
+			<div>
+				<span>2</span>
+				<i class="fas fa-list-ul"></i>
+				Composez votre menu
+			</div>
+			<div>
+				<span>3</span>
+				<i class="fas fa-store"></i>
+				Dégustez au restaurant
+			</div>
+		</section>
+
+		<!--Third Section: Proposal-->
+		<section>
+			<h2>Restaurants</h2>
+
+			<a href="#">
+				<figure>
+					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
+					<figcaption>Nouveau</figcaption>
+					<figcaption>
+						<div>
+							<h3>La palette du goût</h3>
+							<p>Ménilmontant</p>
+						</div>
+						<button><i class="far fa-heart"></i></button>
+					</figcaption>
+				</figure>
+			</a>
+
+			<a href="#">
+				<figure>
+					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+					<figcaption>Nouveau</figcaption>
+					<figcaption>
+						<div>
+							<h3>La note enchantée</h3>
+							<p>Charonne</p>
+						</div>
+						<button><i class="far fa-heart"></i></button>
+					</figcaption>
+				</figure>
+			</a>
+
+			<a href="#">
+				<figure>
+					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
+					<figcaption>
+						<div>
+							<h3>À la française</h3>
+							<p>Cité Rouge</p>
+						</div>
+						<button><i class="far fa-heart"></i></button>
+					</figcaption>
+				</figure>
+			</a>
+
+			<a href="#">
+				<figure>
+					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
+					<figcaption>
+						<div>
+							<h3>Le délices des sens</h3>
+							<p>Folie-Méricourt</p>
+						</div>
+						<button><i class="far fa-heart"></i></button>
+					</figcaption>
+				</figure>
+			</a>
+			
+		</section>
+
+
+		<!--Footer-->
+		<footer>
+			<div>
+                <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
+			</div>
+			<ul>
+				<li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li><a href="#">Mentions légales</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
 
