--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<section>
 			<h2>Restaurants</h2>
 
-			<a href="#">
+			<a href="Menu1.html">
 				<figure>
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
 					<figcaption>Nouveau</figcaption>
@@ -64,7 +64,7 @@
 				</figure>
 			</a>
 
-			<a href="#">
+			<a href="Menu2.html">
 				<figure>
 					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
 					<figcaption>Nouveau</figcaption>
@@ -78,7 +78,7 @@
 				</figure>
 			</a>
 
-			<a href="#">
+			<a href="Menu3.html">
 				<figure>
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
 					<figcaption>
@@ -91,7 +91,7 @@
 				</figure>
 			</a>
 
-			<a href="#">
+			<a href="Menu4.html">
 				<figure>
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
 					<figcaption>
