--- a/Menu1.html
+++ b/Menu1.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<!--Header-->
-		<header>
-			<button><i class="fas fa-arrow-left"></i></button>
-			<div id="logo">
+		<header class="header">
+			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
+			<div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
@@ -19,144 +19,144 @@
 		<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
 		
 		<!--Section: Find a restaurant-->
-		<section>
+		<section class="menu">
 			<div>
-				<h1>La palette du goût</h1>
-				<button><i class="far fa-heart"></i></button>
+				<h1 class="menu__restaurant">La palette du goût</h1>
+				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
 
-				<h4>Entrées</h4>
+				<h4 class="menu__heading">Entrées</h4>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Fricassée d'escargot</h5>
+						<h5 class="choice__heading">Fricassée d'escargot</h5>
 
 						<div>
-							<p>Au piment d'Espelette</p>
-							<p class="price">25€</p>
+							<p class="choice__side">Au piment d'Espelette</p>
+							<p class="choice__price">25€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Foie gras de canard mi-cuit</h5>
+						<h5 class="choice__heading">Foie gras de canard mi-cuit</h5>
 
 						<div>
-							<p>Et ses copeaux de truffe noire</p>
-							<p class="price">35€</p>
+							<p class="choice__side">Et ses copeaux de truffe noire</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Oeuf au plat</h5>
+						<h5 class="choice__heading">Oeuf au plat</h5>
 
 						<div>
-							<p>Assaisonné à la truffe sur lit de caviar</p>
-							<p class="price">20€</p>
+							<p class="choice__side">Assaisonné à la truffe sur lit de caviar</p>
+							<p class="choice__price">20€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
-				</div>
-
-
-				<h4>Plats</h4>
-
-				<div>
-					<div>
-						<h5>Filet de boeuf aux herbes</h5>
-
-						<div>
-							<p>Accompagné de sa ribambelle de légumes</p>
-							<p class="price">40€</p>
-						</div>
-					</div>
-					<button><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div>
-					<div>
-						<h5>Parmentier de queue de boeuf</h5>
-
-						<div>
-							<p>À la truffe noire sur sa purée de panais</p>
-							<p class="price">35€</p>
-						</div>
-					</div>
-					<button><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div>
-					<div>
-						<h5>Filet de turbot</h5>
-
-						<div>
-							<p>Aux agrumes</p>
-							<p class="price">44€</p>
-						</div>
-					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
 
-				<h4>Desserts</h4>
+				<h4 class="menu__heading">Plats</h4>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Paris-Brest</h5>
+						<h5 class="choice__heading">Filet de boeuf aux herbes</h5>
 
 						<div>
-							<p>Revisité</p>
-							<p class="price">18€</p>
+							<p class="choice__side">Accompagné de sa ribambelle de légumes</p>
+							<p class="choice__price">40€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Macaron au chocolat d'exception</h5>
+						<h5 class="choice__heading">Parmentier de queue de boeuf</h5>
 
 						<div>
-							<p>Et glace à la vanille de Madagascar</p>
-							<p class="price">22€</p>
+							<p class="choice__side">À la truffe noire sur sa purée de panais</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Mousse au chocolat</h5>
+						<h5 class="choice__heading">Filet de turbot</h5>
 
 						<div>
-							<p>Au piment d'Espelette et à la truffe noire</p>
-							<p class="price">23€</p>
+							<p class="choice__side">Aux agrumes</p>
+							<p class="choice__price">44€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+
+				<h4 class="menu__heading">Desserts</h4>
+
+				<div class="choice">
+					<div>
+						<h5 class="choice__heading">Paris-Brest</h5>
+
+						<div>
+							<p class="choice__side">Revisité</p>
+							<p class="choice__price">18€</p>
+						</div>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div>
+						<h5 class="choice__heading">Macaron au chocolat d'exception</h5>
+
+						<div>
+							<p class="choice__side">Et glace à la vanille de Madagascar</p>
+							<p class="choice__price">22€</p>
+						</div>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div>
+						<h5 class="choice__heading">Mousse au chocolat</h5>
+
+						<div>
+							<p class="choice__side">Au piment d'Espelette et à la truffe noire</p>
+							<p class="choice__price">23€</p>
+						</div>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 			
 			
-				<button>Commander</button>
+				<button class="menu__command">Commander</button>
 		</section>
 
 
 		<!--Footer-->
-		<footer>
-			<div>
+		<footer class="footer">
+			<div class="footer__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-				<li><a href="#">Mentions légales</a></li>
-				<li><a href="#">Contact</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer_link"><a href="#">Mentions légales</a></li>
+				<li class="footer_link"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
