--- a/Menu2.html
+++ b/Menu2.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<!--Header-->
-		<header>
-			<button><i class="fas fa-arrow-left"></i></button>
-			<div id="logo">
+		<header class="header">
+			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
+			<div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
@@ -19,156 +19,156 @@
 		<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
 		
 		<!--Section: Find a restaurant-->
-		<section>
+		<section class="menu">
 			<div>
-				<h1>La note enchantée</h1>
-				<button><i class="far fa-heart"></i></button>
+				<h1 class="menu__restaurant">La note enchantée</h1>
+				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
 
-				<h4>Entrées</h4>
+				<h4 class="menu__heading">Entrées</h4>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Ravioles de foie gras</h5>
+						<h5 class="choice__heading">Ravioles de foie gras</h5>
 
 						<div>
-							<p>Accompagnés de leur crème à la truffe</p>
-							<p class="price">25€</p>
+							<p class="choice__side">Accompagnés de leur crème à la truffe</p>
+							<p class="choice__price">25€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Caviar osciètre</h5>
+						<h5 class="choice__heading">Caviar osciètre</h5>
 
 						<div>
-							<p>Sur blini à la farine de blé noir</p>
-							<p class="price">35€</p>
+							<p class="choice__side">Sur blini à la farine de blé noir</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Homard et espuma de potiron</h5>
+						<h5 class="choice__heading">Homard et espuma de potiron</h5>
 
 						<div>
-							<p>Mariné aux zestes d'orange</p>
-							<p class="price">20€</p>
+							<p class="choice__side">Mariné aux zestes d'orange</p>
+							<p class="choice__price">20€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Foie gras de canard cuit entier</h5>
+						<h5 class="choice__heading">Foie gras de canard cuit entier</h5>
 
 						<div>
-							<p>Confiture de figue et pain toasté</p>
-							<p class="price">35€</p>
+							<p class="choice__side">Confiture de figue et pain toasté</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
-				</div>
-
-
-				<h4>Plats</h4>
-
-				<div>
-					<div>
-						<h5>Noix de coquilles Saint-Jacques</h5>
-
-						<div>
-							<p>Sur lit de purée de céleri-rave</p>
-							<p class="price">40€</p>
-						</div>
-					</div>
-					<button><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div>
-					<div>
-						<h5>Langoustine poêlée</h5>
-
-						<div>
-							<p>Purée de patate douce</p>
-							<p class="price">35€</p>
-						</div>
-					</div>
-					<button><i class="fas fa-check-circle"></i></button>
-				</div>
-
-				<div>
-					<div>
-						<h5>Mijoté de queue de boeuf</h5>
-
-						<div>
-							<p>Et riz sauvage aux zestes de citron</p>
-							<p class="price">44€</p>
-						</div>
-					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
 
-				<h4>Desserts</h4>
+				<h4 class="menu__heading">Plats</h4>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Macaron noisette et chocolat</h5>
+						<h5 class="choice__heading">Noix de coquilles Saint-Jacques</h5>
 
 						<div>
-							<p>Glace au caramel brun et sel de Guérande</p>
-							<p class="price">18€</p>
+							<p class="choice__side">Sur lit de purée de céleri-rave</p>
+							<p class="choice__price">40€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Baba au rhum revisité</h5>
+						<h5 class="choice__heading">Langoustine poêlée</h5>
 
 						<div>
-							<p>Avec son coulis de citron</p>
-							<p class="price">22€</p>
+							<p class="choice__side">Purée de patate douce</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Tarte au citron meringuée </h5>
+						<h5 class="choice__heading">Mijoté de queue de boeuf</h5>
 
 						<div>
-							<p>Déstructurée</p>
-							<p class="price">23€</p>
+							<p class="choice__side">Et riz sauvage aux zestes de citron</p>
+							<p class="choice__price">44€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+
+				<h4 class="menu__heading">Desserts</h4>
+
+				<div class="choice">
+					<div>
+						<h5 class="choice__heading">Macaron noisette et chocolat</h5>
+
+						<div>
+							<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
+							<p class="choice__price">18€</p>
+						</div>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div>
+						<h5 class="choice__heading">Baba au rhum revisité</h5>
+
+						<div>
+							<p class="choice__side">Avec son coulis de citron</p>
+							<p class="choice__price">22€</p>
+						</div>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+				</div>
+
+				<div class="choice">
+					<div>
+						<h5 class="choice__heading">Tarte au citron meringuée </h5>
+
+						<div>
+							<p class="choice__side">Déstructurée</p>
+							<p class="choice__price">23€</p>
+						</div>
+					</div>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 			
 			
-				<button>Commander</button>
+				<button class="menu__command">Commander</button>
 		</section>
 
 
 		<!--Footer-->
-		<footer>
-			<div>
+		<footer class="footer">
+			<div class="footer__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-				<li><a href="#">Mentions légales</a></li>
-				<li><a href="#">Contact</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer_link"><a href="#">Mentions légales</a></li>
+				<li class="footer_link"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
