--- a/Menu4.html
+++ b/Menu4.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<!--Header-->
-		<header>
-			<button><i class="fas fa-arrow-left"></i></button>
-			<div id="logo">
+		<header class="header">
+			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
+			<div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
@@ -19,148 +19,145 @@
 		<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
 		
 		<!--Section: Find a restaurant-->
-		<section>
+		<section class="menu">
 			<div>
-				<h1>Le délice des sens</h1>
-				<button><i class="far fa-heart"></i></button>
+				<h1 class="menu__restaurant">Le délice des sens</h1>
+				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
-			<div>
-				<h4>Entrées</h4>
+				<h4 class="menu__heading">Entrées</h4>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Tartare de thon</h5>
+						<h5 class="choice__heading">Tartare de thon</h5>
 
 						<div>
-							<p>Assaisonné au yuzu</p>
-							<p class="price">25€</p>
+							<p class="choice__side">Assaisonné au yuzu</p>
+							<p class="choice__price">25€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Bouchée de homard croustillant</h5>
+						<h5 class="choice__heading">Bouchée de homard croustillant</h5>
 
 						<div>
-							<p>Et sa farandole de petits légumes</p>
-							<p class="price">35€</p>
+							<p class="choice__side">Et sa farandole de petits légumes</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Velouté de cèpes</h5>
+						<h5 class="choice__heading">Velouté de cèpes</h5>
 
 						<div>
-							<p>Aux truffes</p>
-							<p class="price">20€</p>
+							<p class="choice__side">Aux truffes</p>
+							<p class="choice__price">20€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-			</div>
 
-			<div>
-				<h4>Plats</h4>
 
-				<div>
+
+				<h4 class="menu__heading">Plats</h4>
+
+				<div class="choice">
 					<div>
-						<h5>Poulet rôti aux herbes de Provence</h5>
+						<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
 
 						<div>
-							<p>Et sa crème de truffe</p>
-							<p class="price">40€</p>
+							<p class="choice__side">Et sa crème de truffe</p>
+							<p class="choice__price">40€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Langouste rôtie </h5>
+						<h5 class="choice__heading">Langouste rôtie </h5>
 
 						<div>
-							<p>Et ses légumes de saison</p>
-							<p class="price">35€</p>
+							<p class="choice__side">Et ses légumes de saison</p>
+							<p class="choice__price">35€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Côte de boeuf Angus</h5>
+						<h5 class="choice__heading">Côte de boeuf Angus</h5>
 
 						<div>
-							<p>Et sa purée de panais</p>
-							<p class="price">44€</p>
+							<p class="choice__side">Et sa purée de panais</p>
+							<p class="choice__price">44€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-			</div>
 
 
-			<div>
-				<h4>Desserts</h4>
+				<h4 class="menu__heading">Desserts</h4>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Farandole de desserts</h5>
+						<h5 class="choice__heading">Farandole de desserts</h5>
 
 						<div>
-							<p>Du chef</p>
-							<p class="price">18€</p>
+							<p class="choice__side">Du chef</p>
+							<p class="choice__price">18€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Crème brulée</h5>
+						<h5 class="choice__heading">Crème brulée</h5>
 
 						<div>
-							<p>Revisitée</p>
-							<p class="price">22€</p>
+							<p class="choice__side">Revisitée</p>
+							<p class="choice__price">22€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
 
-				<div>
+				<div class="choice">
 					<div>
-						<h5>Tiramisu</h5>
+						<h5 class="choice__heading">Tiramisu</h5>
 
 						<div>
-							<p>À la noisette</p>
-							<p class="price">23€</p>
+							<p class="choice__side">À la noisette</p>
+							<p class="choice__price">23€</p>
 						</div>
 					</div>
-					<button><i class="fas fa-check-circle"></i></button>
+					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 				</div>
-			</div>
 
-			<button>Commander</button>
+
+			<button class="menu__command">Commander</button>
 
 		</section>
 
 
 		<!--Footer-->
-		<footer>
-			<div>
+		<footer class="footer">
+			<div class="footer__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-				<li><a href="#">Mentions légales</a></li>
-				<li><a href="#">Contact</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer_link"><a href="#">Mentions légales</a></li>
+				<li class="footer_link"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
