--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 	</head>
 	<body>
 		<!--Header-->
-		<header>
-			<div id="logo">
+		<header class="header">
+			<div class="header__logo">
                 <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
             </div>
 		</header>
 		
 		<!--First Section: Find a restaurant-->
-		<section>
-			<div><i class="fas fa-map-marker-alt"></i>Paris, Belleville</div>
+		<section class="location">
+			<div class="location__current"><i class="fas fa-map-marker-alt"></i>Paris, Belleville</div>
 
-			<div>
+			<div class="location__explorate">
 				<h1>Réservez le menu qui vous convient</h1>
 				<p>Découvrez des restaurants d'exceptions, sélectionnés par nos soins.</p>
 				<button>Explorer nos restaurants</button>
@@ -27,19 +27,19 @@
 		</section>
 
 		<!--Second Section: Help for use-->
-		<section>
-			<h2>Fonctionnement</h2>
-			<div>
+		<section class="help">
+			<h2 class="help__heading">Fonctionnement</h2>
+			<div class="help__explanation">
 				<span>1</span>
 				<i class="fas fa-mobile-alt"></i>
 				Choisissez un restaurant
 			</div>
-			<div>
+			<div class="help__explanation">
 				<span>2</span>
 				<i class="fas fa-list-ul"></i>
 				Composez votre menu
 			</div>
-			<div>
+			<div class="help__explanation--color">
 				<span>3</span>
 				<i class="fas fa-store"></i>
 				Dégustez au restaurant
@@ -47,59 +47,59 @@
 		</section>
 
 		<!--Third Section: Proposal-->
-		<section>
-			<h2>Restaurants</h2>
+		<section class="grid">
+			<h2 class="grid__heading">Restaurants</h2>
 
 			<a href="Menu1.html">
-				<figure>
-					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
-					<figcaption>Nouveau</figcaption>
+				<figure class="restaurant">
+					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût" class="restaurant__image">
+					<figcaption class="resataurant__new">Nouveau</figcaption>
 					<figcaption>
 						<div>
-							<h3>La palette du goût</h3>
-							<p>Ménilmontant</p>
+							<h3 class="restaurant__heading">La palette du goût</h3>
+							<p class="restaurant__location">Ménilmontant</p>
 						</div>
-						<button><i class="far fa-heart"></i></button>
+						<button class="restaurant__like"><i class="far fa-heart"></i></button>
 					</figcaption>
 				</figure>
 			</a>
 
 			<a href="Menu2.html">
-				<figure>
-					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
-					<figcaption>Nouveau</figcaption>
+				<figure class="restaurant">
+					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" class="restaurant__image">
+					<figcaption class="resataurant__new">Nouveau</figcaption>
 					<figcaption>
 						<div>
-							<h3>La note enchantée</h3>
-							<p>Charonne</p>
+							<h3 class="restaurant__heading">La note enchantée</h3>
+							<p class="restaurant__location">Charonne</p>
 						</div>
-						<button><i class="far fa-heart"></i></button>
+						<button class="restaurant__like"><i class="far fa-heart"></i></button>
 					</figcaption>
 				</figure>
 			</a>
 
 			<a href="Menu3.html">
-				<figure>
-					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française">
+				<figure class="restaurant">
+					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française" class="restaurant__image">
 					<figcaption>
 						<div>
-							<h3>À la française</h3>
-							<p>Cité Rouge</p>
+							<h3 class="restaurant__heading">À la française</h3>
+							<p class="restaurant__location">Cité Rouge</p>
 						</div>
-						<button><i class="far fa-heart"></i></button>
+						<button class="restaurant__like"><i class="far fa-heart"></i></button>
 					</figcaption>
 				</figure>
 			</a>
 
 			<a href="Menu4.html">
-				<figure>
-					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
+				<figure class="restaurant">
+					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens" class="restaurant__image">
 					<figcaption>
 						<div>
-							<h3>Le délices des sens</h3>
-							<p>Folie-Méricourt</p>
+							<h3 class="restaurant__heading">Le délices des sens</h3>
+							<p class="restaurant__location">Folie-Méricourt</p>
 						</div>
-						<button><i class="far fa-heart"></i></button>
+						<button class="restaurant__like"><i class="far fa-heart"></i></button>
 					</figcaption>
 				</figure>
 			</a>
@@ -108,15 +108,15 @@
 
 
 		<!--Footer-->
-		<footer>
-			<div>
+		<footer class="footer">
+			<div class="footer__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-				<li><a href="#">Mentions légales</a></li>
-				<li><a href="#">Contact</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer_link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer_link"><a href="#">Mentions légales</a></li>
+				<li class="footer_link"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
