--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<i class="fas fa-list-ul"></i>
 				Composez votre menu
 			</div>
-			<div class="help__explanation--color">
+			<div class="help__explanation help__explanation--color">
 				<span>3</span>
 				<i class="fas fa-store"></i>
 				Dégustez au restaurant
