--- a/Menu4.html
+++ b/Menu4.html
@@ -154,10 +154,10 @@
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li class="footer_link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li class="footer_link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-				<li class="footer_link"><a href="#">Mentions légales</a></li>
-				<li class="footer_link"><a href="#">Contact</a></li>
+				<li class="footer__link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer__link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer__link"><a href="#">Mentions légales</a></li>
+				<li class="footer__link"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
