--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<i class="fas fa-list-ul"></i>
 				Composez votre menu
 			</div>
-			<div class="help__explanation help__explanation--color">
+			<div class="help__explanation">
 				<span>3</span>
 				<i class="fas fa-store"></i>
 				Dégustez au restaurant
@@ -53,13 +53,11 @@
 			<a href="Menu1.html">
 				<figure class="restaurant">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût" class="restaurant__image">
-					<figcaption class="resataurant__new">Nouveau</figcaption>
+					<div class="restaurant__new">Nouveau</div>
 					<figcaption>
-						<div>
-							<h3 class="restaurant__heading">La palette du goût</h3>
-							<p class="restaurant__location">Ménilmontant</p>
-						</div>
-						<button class="restaurant__like"><i class="far fa-heart"></i></button>
+						<h3 class="restaurant__heading">La palette du goût</h3>
+						<p class="restaurant__location">Ménilmontant</p>
+						<i class="far fa-heart restaurant__like"></i>
 					</figcaption>
 				</figure>
 			</a>
@@ -67,13 +65,11 @@
 			<a href="Menu2.html">
 				<figure class="restaurant">
 					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" class="restaurant__image">
-					<figcaption class="resataurant__new">Nouveau</figcaption>
+					<div class="restaurant__new">Nouveau</div>
 					<figcaption>
-						<div>
-							<h3 class="restaurant__heading">La note enchantée</h3>
-							<p class="restaurant__location">Charonne</p>
-						</div>
-						<button class="restaurant__like"><i class="far fa-heart"></i></button>
+						<h3 class="restaurant__heading">La note enchantée</h3>
+						<p class="restaurant__location">Charonne</p>
+						<i class="far fa-heart restaurant__like"></i>
 					</figcaption>
 				</figure>
 			</a>
@@ -82,11 +78,9 @@
 				<figure class="restaurant">
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française" class="restaurant__image">
 					<figcaption>
-						<div>
-							<h3 class="restaurant__heading">À la française</h3>
-							<p class="restaurant__location">Cité Rouge</p>
-						</div>
-						<button class="restaurant__like"><i class="far fa-heart"></i></button>
+						<h3 class="restaurant__heading">À la française</h3>
+						<p class="restaurant__location">Cité Rouge</p>
+						<i class="far fa-heart restaurant__like"></i>
 					</figcaption>
 				</figure>
 			</a>
@@ -95,11 +89,9 @@
 				<figure class="restaurant">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens" class="restaurant__image">
 					<figcaption>
-						<div>
-							<h3 class="restaurant__heading">Le délices des sens</h3>
-							<p class="restaurant__location">Folie-Méricourt</p>
-						</div>
-						<button class="restaurant__like"><i class="far fa-heart"></i></button>
+						<h3 class="restaurant__heading">Le délices des sens</h3>
+						<p class="restaurant__location">Folie-Méricourt</p>
+						<i class="far fa-heart restaurant__like"></i>
 					</figcaption>
 				</figure>
 			</a>
@@ -113,10 +105,10 @@
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li class="footer_link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li class="footer_link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-				<li class="footer_link"><a href="#">Mentions légales</a></li>
-				<li class="footer_link"><a href="#">Contact</a></li>
+				<li class="footer__link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer__link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer__link"><a href="#">Mentions légales</a></li>
+				<li class="footer__link"><a href="#">Contact</a></li>
 			</ul>
 		</footer>
 	</body>
