--- a/Menu2.html
+++ b/Menu2.html
@@ -7,7 +7,7 @@
 		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
 		<title>Menu - La palette du goût</title>
 	</head>
-	<body>
+	<body class="restaurant">
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -16,127 +16,112 @@
             </div>
 		</header>
 
-		<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+		<div class="image">
+			<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+		</div>
 		
 		<!--Section: Find a restaurant-->
 		<section class="menu">
-			<div>
-				<h1 class="menu__restaurant">La note enchantée</h1>
+			<div class="menu__restaurant">
+				<h1 class="menu__heading">La note enchantée</h1>
 				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
-			<h4 class="menu__heading">Entrées</h4>
+			<h4 class="menu__subtitle">Entrées</h4>
+			<div class="menu__green-line"></div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Ravioles de foie gras</h5>
-					<div>
-						<p class="choice__side">Accompagnés de leur crème à la truffe</p>
-						<p class="choice__price">25€</p>
-					</div>
+					<p class="choice__side">Accompagnés de leur crème à la truffe</p>
+					<p class="choice__price">25€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description"></div>
 					<h5 class="choice__heading">Caviar osciètre</h5>
-					<div>
-						<p class="choice__side">Sur blini à la farine de blé noir</p>
-						<p class="choice__price">35€</p>
-					</div>
+					<p class="choice__side">Sur blini à la farine de blé noir</p>
+					<p class="choice__price">35€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Homard et espuma de potiron</h5>
-					<div>
-						<p class="choice__side">Mariné aux zestes d'orange</p>
-						<p class="choice__price">20€</p>
-					</div>
+					<p class="choice__side">Mariné aux zestes d'orange</p>
+					<p class="choice__price">20€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Foie gras de canard cuit entier</h5>
-					<div>
-						<p class="choice__side">Confiture de figue et pain toasté</p>
-						<p class="choice__price">35€</p>
-					</div>
+					<p class="choice__side">Confiture de figue et pain toasté</p>
+					<p class="choice__price">35€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
-			<h4 class="menu__heading">Plats</h4>
+			<h4 class="menu__subtitle">Plats</h4>
+			<div class="menu__green-line"></div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Noix de coquilles Saint-Jacques</h5>
-					<div>
-						<p class="choice__side">Sur lit de purée de céleri-rave</p>
-						<p class="choice__price">40€</p>
-					</div>
+					<p class="choice__side">Sur lit de purée de céleri-rave</p>
+					<p class="choice__price">40€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Langoustine poêlée</h5>
-					<div>
-						<p class="choice__side">Purée de patate douce</p>
-						<p class="choice__price">35€</p>
-					</div>
+					<p class="choice__side">Purée de patate douce</p>
+					<p class="choice__price">35€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Mijoté de queue de boeuf</h5>
-					<div>
-						<p class="choice__side">Et riz sauvage aux zestes de citron</p>
-						<p class="choice__price">44€</p>
-					</div>
+					<p class="choice__side">Et riz sauvage aux zestes de citron</p>
+					<p class="choice__price">44€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
-			<h4 class="menu__heading">Desserts</h4>
+			<h4 class="menu__subtitle">Desserts</h4>
+			<div class="menu__green-line"></div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Macaron noisette et chocolat</h5>
-					<div>
-						<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
-						<p class="choice__price">18€</p>
-					</div>
+					<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
+					<p class="choice__price">18€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Baba au rhum revisité</h5>
-					<div>
-						<p class="choice__side">Avec son coulis de citron</p>
-						<p class="choice__price">22€</p>
-					</div>
+					<p class="choice__side">Avec son coulis de citron</p>
+					<p class="choice__price">22€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
 
 			<div class="choice">
-				<div>
+				<div class="choice__description">
 					<h5 class="choice__heading">Tarte au citron meringuée </h5>
-					<div>
-						<p class="choice__side">Déstructurée</p>
-						<p class="choice__price">23€</p>
-					</div>
+					<p class="choice__side">Déstructurée</p>
+					<p class="choice__price">23€</p>
 				</div>
 				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
 			</div>
