--- a/Menu4.html
+++ b/Menu4.html
@@ -7,7 +7,7 @@
 		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
 		<title>Menu - La palette du goût</title>
 	</head>
-	<body>
+	<body class="restaurant">
 		<!--Header-->
 		<header class="header">
 			<a class="header__previous" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -16,132 +16,107 @@
             </div>
 		</header>
 
-		<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
+		<div class="image">
+			<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délices des sens">
+		</div>
 		
 		<!--Section: Find a restaurant-->
 		<section class="menu">
-			<div>
-				<h1 class="menu__restaurant">Le délice des sens</h1>
+
+			<div class="menu__restaurant">
+				<h1 class="menu__heading">Le délice des sens</h1>
 				<button class="menu__like"><i class="far fa-heart"></i></button>
 			</div>
 
-				<h4 class="menu__heading">Entrées</h4>
+			<h4 class="menu__subtitle">Entrées</h4>
+			<div class="menu__green-line"></div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Tartare de thon</h5>
-
-						<div>
-							<p class="choice__side">Assaisonné au yuzu</p>
-							<p class="choice__price">25€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Tartare de thon</h5>
+					<p class="choice__side">Assaisonné au yuzu</p>
+					<p class="choice__price">25€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Bouchée de homard croustillant</h5>
-
-						<div>
-							<p class="choice__side">Et sa farandole de petits légumes</p>
-							<p class="choice__price">35€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Bouchée de homard croustillant</h5>
+					<p class="choice__side">Et sa farandole de petits légumes</p>
+					<p class="choice__price">35€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Velouté de cèpes</h5>
-
-						<div>
-							<p class="choice__side">Aux truffes</p>
-							<p class="choice__price">20€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Velouté de cèpes</h5>
+					<p class="choice__side">Aux truffes</p>
+					<p class="choice__price">20€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
+			<h4 class="menu__subtitle">Plats</h4>
+			<div class="menu__green-line"></div>
 
-
-				<h4 class="menu__heading">Plats</h4>
-
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
-
-						<div>
-							<p class="choice__side">Et sa crème de truffe</p>
-							<p class="choice__price">40€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Poulet rôti aux herbes de Provence</h5>
+					<p class="choice__side">Et sa crème de truffe</p>
+					<p class="choice__price">40€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Langouste rôtie </h5>
-
-						<div>
-							<p class="choice__side">Et ses légumes de saison</p>
-							<p class="choice__price">35€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Langouste rôtie </h5>
+					<p class="choice__side">Et ses légumes de saison</p>
+					<p class="choice__price">35€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Côte de boeuf Angus</h5>
-
-						<div>
-							<p class="choice__side">Et sa purée de panais</p>
-							<p class="choice__price">44€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Côte de boeuf Angus</h5>
+					<p class="choice__side">Et sa purée de panais</p>
+					<p class="choice__price">44€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
+			<h4 class="menu__subtitle">Desserts</h4>
+			<div class="menu__green-line"></div>
 
-				<h4 class="menu__heading">Desserts</h4>
-
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Farandole de desserts</h5>
-
-						<div>
-							<p class="choice__side">Du chef</p>
-							<p class="choice__price">18€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Farandole de desserts</h5>
+					<p class="choice__side">Du chef</p>
+					<p class="choice__price">18€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Crème brulée</h5>
-
-						<div>
-							<p class="choice__side">Revisitée</p>
-							<p class="choice__price">22€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Crème brulée</h5>
+					<p class="choice__side">Revisitée</p>
+					<p class="choice__price">22€</p>
 				</div>
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
-				<div class="choice">
-					<div>
-						<h5 class="choice__heading">Tiramisu</h5>
-
-						<div>
-							<p class="choice__side">À la noisette</p>
-							<p class="choice__price">23€</p>
-						</div>
-					</div>
-					<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			<div class="choice">
+				<div class="choice__description">
+					<h5 class="choice__heading">Tiramisu</h5>
+					<p class="choice__side">À la noisette</p>
+					<p class="choice__price">23€</p>
 				</div>
-
+				<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+			</div>
 
 			<button class="menu__command">Commander</button>
 
