--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 		
 		<!--First Section: Find a restaurant-->
 		<section class="location">
-			<div class="location__current"><i class="fas fa-map-marker-alt"></i>Paris, Belleville</div>
+			<div class="location__current">
+				<i class="fas fa-map-marker-alt"></i>
+				<p>Paris, Belleville</p>
+			</div>
 
 			<div class="location__explorate">
 				<h1>Réservez le menu qui vous convient</h1>
@@ -32,17 +35,17 @@
 			<div class="help__explanation">
 				<span>1</span>
 				<i class="fas fa-mobile-alt"></i>
-				Choisissez un restaurant
+				<p>Choisissez un restaurant</p>
 			</div>
 			<div class="help__explanation">
 				<span>2</span>
 				<i class="fas fa-list-ul"></i>
-				Composez votre menu
+				<p>Composez votre menu</p>
 			</div>
 			<div class="help__explanation">
 				<span>3</span>
 				<i class="fas fa-store"></i>
-				Dégustez au restaurant
+				<p>Dégustez au restaurant</p>
 			</div>
 		</section>
 
@@ -105,8 +108,8 @@
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li class="footer__link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li class="footer__link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer__link footer__ustensils-icon"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer__link footer__hands-icon"><a href="#"><i class="fas fa-hands-helping" id="second-icon"></i>Devenir partenaire</a></li>
 				<li class="footer__link"><a href="#">Mentions légales</a></li>
 				<li class="footer__link"><a href="#">Contact</a></li>
 			</ul>
