--- a/Menu1.html
+++ b/Menu1.html
@@ -121,7 +121,7 @@
 			</div>
 			
 			<button class="menu__command">Commander</button>
-			
+
 		</section>
 
 
@@ -131,8 +131,8 @@
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood svg"/>
 			</div>
 			<ul>
-				<li class="footer__link"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-				<li class="footer__link"><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+				<li class="footer__link footer__ustensils-icon"><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+				<li class="footer__link footer__hands-icon"><a href="#"><i class="fas fa-hands-helping" id="second-icon"></i>Devenir partenaire</a></li>
 				<li class="footer__link"><a href="#">Mentions légales</a></li>
 				<li class="footer__link"><a href="#">Contact</a></li>
 			</ul>
